[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["artwork", "tests"]

[project]
name = "omni_json_db"
version = "2.11.11"
authors = [
	{ name="Lukatrum", email="lukatrum@gmail.com"}
]
description = "A zero-config, powerful JSON database with compression. No schema, no setup, just data."
readme = "README.rst"
requires-python = ">=3.7"
keywords = [
	"backup",
	"big-data",
	"binary",
	"caching",
	"cluster",
	"compression",
	"concurrency",
	"configuration",
	"csv",
	"data",
	"database",
	"date-lookup",
	"db",
	"dict",
	"file-based",
	"filelock",
	"ini",
	"in-memory",
	"json",
	"key-value",
	"marshal",
	"messagepack",
	"mrsw-lock",	
	"msgpack",
	"multiprocessing",
	"multithreading",	
	"network",
	"nosql",
	"persistence",
	"pickle",
	"restore",
	"revertable",
	"search",
	"serialization",
	"serverless",
	"sqlite",
	"storage",
	"sync",
	"time-series",
	"toml",
	"query",
	"yaml",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",	
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
    "Topic :: File Formats :: JSON",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
	"bitarray>=3.8.0",
	"msgpack>=1.0.5",
	"orjson>=3.9.7; platform_python_implementation != 'PyPy'",
	"portalocker>=2.7.0; os_name == 'nt'",
]
license="MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
full = [
	"brotli>=1.2.0",
	"BTrees>=5.2",
	"lz4>=4.3.2",
	"ormsgpack>=1.2.6; platform_python_implementation != 'PyPy'",
	"PyYAML>=6.0.3; python_version != '3.7'",
	"tomli>=2.0.1",
	"zstandard>=0.21.0",	
]

[project.urls]
"Homepage" = "https://github.com/lukatrum"
"Repository" = "https://github.com/lukatrum/omni-json-db"
"Bug Tracker" = "https://github.com/lukatrum/omni-json-db/issues"
"Wiki" = "https://github.com/Lukatrum/omni-json-db/wiki"
